Fix guest names field icon alignment

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -835,7 +835,7 @@ RSVP form
         left: 30px;
         transform: translateY(-50%);
       }
-      i.fa-user, i.fa-users, i.fa-envelope, .fa-key {
+      i.fa-user, i.fa-users, i.fa-envelope, .fa-key, i.fa-user-plus {
         font-size: 14px;
         position: absolute;
         top: 50%;
